WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
157675
Give CrossThreadCopier a default specialization for Vectors of objects
https://bugs.webkit.org/show_bug.cgi?id=157675
Summary
Give CrossThreadCopier a default specialization for Vectors of objects
Brady Eidson
Reported
2016-05-13 08:53:07 PDT
Give CrossThreadCopier a generic specialization for Vectors of objects
Attachments
Patch v1
(2.91 KB, patch)
2016-05-13 09:00 PDT
,
Brady Eidson
no flags
Details
Formatted Diff
Diff
Patch
(2.91 KB, patch)
2016-05-13 09:07 PDT
,
Brady Eidson
darin
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Brady Eidson
Comment 1
2016-05-13 09:00:59 PDT
Created
attachment 278838
[details]
Patch v1
WebKit Commit Bot
Comment 2
2016-05-13 09:02:56 PDT
Attachment 278838
[details]
did not pass style-queue: ERROR: Source/WebCore/platform/CrossThreadCopier.h:170: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Brady Eidson
Comment 3
2016-05-13 09:07:47 PDT
Created
attachment 278839
[details]
Patch
Darin Adler
Comment 4
2016-05-13 09:31:25 PDT
Comment on
attachment 278839
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=278839&action=review
> Source/WebCore/platform/CrossThreadCopier.h:170 > + static Type copy(const Vector<T>& source)
I would have written const Type&.
> Source/WebCore/platform/CrossThreadCopier.h:176 > +
I would have omitted this blank line.
Darin Adler
Comment 5
2016-05-13 09:31:45 PDT
Comment on
attachment 278839
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=278839&action=review
> Source/WebCore/platform/CrossThreadCopier.h:168 > +template<typename T> struct CrossThreadCopierBase<false, false, Vector<T>> {
Could consider making this work for vectors with inline capacity too.
Brady Eidson
Comment 6
2016-05-13 10:23:07 PDT
(In reply to
comment #5
)
> Comment on
attachment 278839
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=278839&action=review
> > > Source/WebCore/platform/CrossThreadCopier.h:168 > > +template<typename T> struct CrossThreadCopierBase<false, false, Vector<T>> { > > Could consider making this work for vectors with inline capacity too.
I think this would require a second specialization, so I'll punt until it's actually needed (Which, since these are rare enough, might be never)
Brady Eidson
Comment 7
2016-05-13 10:36:48 PDT
http://trac.webkit.org/changeset/200861
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug