Give CrossThreadCopier a default specialization for Vectors of objects. https://bugs.webkit.org/show_bug.cgi?id=157675

Reviewed by Darin Adler.

No new tests (Refactor, no change in behavior).

* platform/CrossThreadCopier.cpp:
(WebCore::Vector<String>>::copy): Deleted.
* platform/CrossThreadCopier.h: Add a default specialization for Vector<T> where T is a type
  that is CrossThreadCopyable itself.

Canonical link: https://commits.webkit.org/175800@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@200861 268f45cc-cd09-0410-ab3c-d52691b4dbfc